--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.33.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.28.0",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-helmet": "^6.1.5",
     "@types/styled-components": "^5.1.24"
   }
